infra/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-ui
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
